Fixed Jumbotron
Fixed jumbotron overlapping page content, begun adding skills section to portfolio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@ Red #FF0000;
 Dark Red #AF0404;
 Gray-Black #414141;
 */
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background-color: #252525;
@@ -40,7 +43,7 @@ h1 {
   background-color: rgba(0,0,0,0)!important;
   color: whitesmoke;
   position: fixed;
-  z-index: 0;
+  z-index: 100;
 }
 
 .display-4 {
@@ -54,17 +57,17 @@ h2 {
 .head-link {
   color: whitesmoke;
   font-size: 30px;
-  z-index: -1;
+  z-index: 101;
 }
 
 a {
-  z-index: -1;
+  z-index: 101;
 }
 
 .head-link:hover {
   color: #AF0404;
   text-decoration: none;
-  z-index: 11;
+  z-index: 101;
 }
 
 div.col-lg {
@@ -74,23 +77,24 @@ div.col-lg {
 /* Portfolio */
 
 .container-fluid {
-  z-index: 100;
+  z-index: 200;
 }
 
 #portfolio {
   background-color: #AF0404;
-  z-index: 100;
+  z-index: 200;
   border-top: 2px solid #FF0000;
+  position: relative;
 }
 
-#port-head {
+.sect-head {
   font-size: 50px;
   text-align: center;
   display: block;
   align-items: center;
   color: #252525;
   text-shadow: none;
-  z-index: 10;
+  z-index: 200;
 }
 
 img {
@@ -115,4 +119,17 @@ img {
 
 .port-img:hover {
   box-shadow: 2px 2px 5px #FF0000;
+}
+
+/* Skills */
+#skills {
+  background-color: #252525;
+}
+
+#skills-head {
+  color: #AF0404;
+}
+
+.skills-skillname {
+  color: #AF0404;
 }
